[gd_scene load_steps=45 format=3 uid="uid://dtmw5o80xydm1"]

[ext_resource type="Script" uid="uid://bdlr56ya76gfw" path="res://GameFiles/Gameplay Scripts/player_physics.gd" id="1_7rv2c"]
[ext_resource type="Script" uid="uid://bjc8pfrnjxvr1" path="res://GameFiles/Gameplay Scripts/state_machine.gd" id="2_ox70h"]
[ext_resource type="Script" uid="uid://b3qk7v56uvwxa" path="res://GameFiles/Gameplay Scripts/States/on_ground.gd" id="3_q7eih"]
[ext_resource type="Script" uid="uid://b8yjnislskjmq" path="res://GameFiles/Gameplay Scripts/States/on_air.gd" id="4_qqkve"]
[ext_resource type="AudioStream" uid="uid://cptovtbfsc0pd" path="res://GameFiles/SoundEffects/StarCollected.mp3" id="5_8qqrx"]
[ext_resource type="Texture2D" uid="uid://dg8bsh4ejohl6" path="res://GameFiles/SpinHead IMGS/Characters/BatBall/BatBall.png" id="5_dl1cr"]
[ext_resource type="Texture2D" uid="uid://tj0hod5cct8k" path="res://GameFiles/SpinHead IMGS/Characters/Rollin Jack/RollinJackGOLD.png" id="5_n5wmo"]
[ext_resource type="Texture2D" uid="uid://dumdb7douh0n7" path="res://GameFiles/SpinHead IMGS/Characters/The Masked/0.png" id="5_oi1s3"]
[ext_resource type="Texture2D" uid="uid://da2sv5h1ig14h" path="res://GameFiles/SpinHead IMGS/Currency/Star/0.png" id="5_vuduk"]
[ext_resource type="AudioStream" uid="uid://c3188lba5ttkc" path="res://GameFiles/SoundEffects/DoppelDead.mp3" id="6_7qgch"]
[ext_resource type="Texture2D" uid="uid://bdienoa8tuabn" path="res://GameFiles/SpinHead IMGS/Currency/Star/1.png" id="6_biqdo"]
[ext_resource type="Texture2D" uid="uid://mcd5iu0pdis" path="res://GameFiles/SpinHead IMGS/Characters/The Masked/1.png" id="6_wyu44"]
[ext_resource type="Texture2D" uid="uid://c40f5e5s1f35o" path="res://GameFiles/SpinHead IMGS/Characters/The Masked/2.png" id="7_g1kdb"]
[ext_resource type="Texture2D" uid="uid://c57xlhseipkmb" path="res://GameFiles/SpinHead IMGS/Currency/Star/2.png" id="7_xhesi"]
[ext_resource type="Texture2D" uid="uid://7u7g35orgerp" path="res://GameFiles/SpinHead IMGS/Currency/Star/3.png" id="8_6ogv4"]
[ext_resource type="Texture2D" uid="uid://ub6stn64pxm1" path="res://GameFiles/SpinHead IMGS/Currency/Star/4.png" id="9_a176v"]
[ext_resource type="Texture2D" uid="uid://dy6boe5ct4skx" path="res://GameFiles/SpinHead IMGS/Currency/Star/5.png" id="10_cpk41"]
[ext_resource type="Texture2D" uid="uid://cw3f7xe41mupy" path="res://GameFiles/SpinHead IMGS/Currency/Star/6.png" id="11_f23db"]
[ext_resource type="Texture2D" uid="uid://b8x3jddhf35q" path="res://GameFiles/SpinHead IMGS/Currency/Star/7.png" id="12_xemsw"]
[ext_resource type="Texture2D" uid="uid://b6bcvplruojwv" path="res://GameFiles/SpinHead IMGS/Currency/Star/glow.png" id="13_s3aw0"]
[ext_resource type="Texture2D" uid="uid://7igeoiwbytm8" path="res://GameFiles/SpinHead IMGS/Characters/Smooth Skater/SmoothSkater.png" id="17_im273"]
[ext_resource type="Texture2D" uid="uid://bvgji3am3f5pg" path="res://GameFiles/SpinHead IMGS/Characters/Smooth Skater/wheel.png" id="18_ienhp"]
[ext_resource type="Texture2D" uid="uid://csl0kg7c8cal2" path="res://GameFiles/SpinHead IMGS/Characters/Segway Johnny/outerLayer.png" id="19_m64th"]
[ext_resource type="Texture2D" uid="uid://be7pqa02jdhbk" path="res://GameFiles/SpinHead IMGS/Characters/Segway Johnny/wheel.png" id="20_15mi0"]
[ext_resource type="Texture2D" uid="uid://b5u3qmxmeol3v" path="res://GameFiles/SpinHead IMGS/Missile/fire_B/0.png" id="21_7awrw"]
[ext_resource type="Texture2D" uid="uid://cks6l3u8foksq" path="res://GameFiles/SpinHead IMGS/Missile/fire_B/1.png" id="22_6dgki"]
[ext_resource type="Texture2D" uid="uid://bk8ui4y1p2xp2" path="res://GameFiles/SpinHead IMGS/Missile/fire_B/2.png" id="23_5n6pw"]
[ext_resource type="Texture2D" uid="uid://bj41uv2ukbs33" path="res://GameFiles/SpinHead IMGS/Missile/fire_R/0.png" id="24_l3c16"]
[ext_resource type="Texture2D" uid="uid://dmey2pjxpr7ow" path="res://GameFiles/SpinHead IMGS/Missile/fire_R/1.png" id="25_jb7t5"]
[ext_resource type="Texture2D" uid="uid://ca3b23s7cv71x" path="res://GameFiles/SpinHead IMGS/Missile/fire_R/2.png" id="26_x2vgw"]
[ext_resource type="Texture2D" uid="uid://dynhqbcqas53g" path="res://GameFiles/SpinHead IMGS/Missile/Misslie.png" id="27_3jnxc"]
[ext_resource type="Script" uid="uid://brqciicfu415f" path="res://GameFiles/Gameplay Scripts/CharacterScripts/MissileFire.gd" id="27_xoh8o"]
[ext_resource type="Texture2D" uid="uid://b1g4xqq1cipfu" path="res://GameFiles/SpinHead IMGS/Characters/Outrider/outerLayer.png" id="29_8hxwy"]
[ext_resource type="Texture2D" uid="uid://b18t73n616l3y" path="res://GameFiles/SpinHead IMGS/Characters/Outrider/glassMan.png" id="30_bb6r6"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ksm4e"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_oi1s3")
}, {
"duration": 1.0,
"texture": ExtResource("5_oi1s3")
}, {
"duration": 1.0,
"texture": ExtResource("5_oi1s3")
}, {
"duration": 1.0,
"texture": ExtResource("5_oi1s3")
}, {
"duration": 1.0,
"texture": ExtResource("5_oi1s3")
}, {
"duration": 1.0,
"texture": ExtResource("6_wyu44")
}, {
"duration": 1.0,
"texture": ExtResource("7_g1kdb")
}, {
"duration": 1.0,
"texture": ExtResource("7_g1kdb")
}, {
"duration": 1.0,
"texture": ExtResource("7_g1kdb")
}, {
"duration": 1.0,
"texture": ExtResource("7_g1kdb")
}, {
"duration": 1.0,
"texture": ExtResource("7_g1kdb")
}, {
"duration": 1.0,
"texture": ExtResource("6_wyu44")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_yxqht"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("21_7awrw")
}, {
"duration": 1.0,
"texture": ExtResource("21_7awrw")
}, {
"duration": 1.0,
"texture": ExtResource("21_7awrw")
}, {
"duration": 1.0,
"texture": ExtResource("22_6dgki")
}, {
"duration": 1.0,
"texture": ExtResource("22_6dgki")
}, {
"duration": 1.0,
"texture": ExtResource("23_5n6pw")
}, {
"duration": 1.0,
"texture": ExtResource("23_5n6pw")
}, {
"duration": 1.0,
"texture": ExtResource("22_6dgki")
}, {
"duration": 1.0,
"texture": ExtResource("22_6dgki")
}],
"loop": true,
"name": &"fire_B",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("24_l3c16")
}, {
"duration": 1.0,
"texture": ExtResource("24_l3c16")
}, {
"duration": 1.0,
"texture": ExtResource("24_l3c16")
}, {
"duration": 1.0,
"texture": ExtResource("25_jb7t5")
}, {
"duration": 1.0,
"texture": ExtResource("25_jb7t5")
}, {
"duration": 1.0,
"texture": ExtResource("26_x2vgw")
}, {
"duration": 1.0,
"texture": ExtResource("26_x2vgw")
}, {
"duration": 1.0,
"texture": ExtResource("25_jb7t5")
}, {
"duration": 1.0,
"texture": ExtResource("25_jb7t5")
}],
"loop": true,
"name": &"fire_R",
"speed": 20.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_ncap1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_vuduk")
}, {
"duration": 1.0,
"texture": ExtResource("5_vuduk")
}, {
"duration": 1.0,
"texture": ExtResource("5_vuduk")
}, {
"duration": 1.0,
"texture": ExtResource("6_biqdo")
}, {
"duration": 1.0,
"texture": ExtResource("7_xhesi")
}, {
"duration": 1.0,
"texture": ExtResource("7_xhesi")
}, {
"duration": 1.0,
"texture": ExtResource("8_6ogv4")
}, {
"duration": 1.0,
"texture": ExtResource("9_a176v")
}, {
"duration": 1.0,
"texture": ExtResource("9_a176v")
}, {
"duration": 1.0,
"texture": ExtResource("9_a176v")
}, {
"duration": 1.0,
"texture": ExtResource("10_cpk41")
}, {
"duration": 1.0,
"texture": ExtResource("11_f23db")
}, {
"duration": 1.0,
"texture": ExtResource("11_f23db")
}, {
"duration": 1.0,
"texture": ExtResource("12_xemsw")
}],
"loop": true,
"name": &"Spin",
"speed": 20.0
}]

[sub_resource type="Animation" id="Animation_6jlqe"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_spbvp"]
resource_name = "Reset"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_sr66w"]
resource_name = "invisFrames"
length = 0.2
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_svdnd"]
_data = {
&"RESET": SubResource("Animation_6jlqe"),
&"Reset": SubResource("Animation_spbvp"),
&"invisFrames": SubResource("Animation_sr66w")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_gdqmg"]
radius = 3.02999
height = 6.05999

[sub_resource type="CircleShape2D" id="CircleShape2D_107ty"]
radius = 9.0

[sub_resource type="SeparationRayShape2D" id="SeparationRayShape2D_5wp5o"]

[node name="Player" type="CharacterBody2D"]
z_index = 1
wall_min_slide_angle = 3.14159
script = ExtResource("1_7rv2c")

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("2_ox70h")

[node name="OnGround" type="Node" parent="StateMachine"]
script = ExtResource("3_q7eih")

[node name="OnAir" type="Node" parent="StateMachine"]
script = ExtResource("4_qqkve")

[node name="Characters" type="Node2D" parent="."]
position = Vector2(0, -2)

[node name="RollinJackGold" type="Sprite2D" parent="Characters"]
visible = false
texture = ExtResource("5_n5wmo")

[node name="TheMasked" type="AnimatedSprite2D" parent="Characters"]
visible = false
scale = Vector2(1.2, 1.2)
sprite_frames = SubResource("SpriteFrames_ksm4e")
autoplay = "default"
frame_progress = 0.681847

[node name="BatBall" type="Sprite2D" parent="Characters"]
visible = false
texture = ExtResource("5_dl1cr")

[node name="SmoothSkater" type="Sprite2D" parent="Characters"]
visible = false
position = Vector2(9, 0)
texture = ExtResource("17_im273")

[node name="Wheel" type="Sprite2D" parent="Characters/SmoothSkater"]
position = Vector2(-22, 16)
texture = ExtResource("18_ienhp")

[node name="Wheel2" type="Sprite2D" parent="Characters/SmoothSkater"]
position = Vector2(4, 16)
texture = ExtResource("18_ienhp")

[node name="SegwayJohnny" type="Sprite2D" parent="Characters"]
position = Vector2(0, -12)
scale = Vector2(1.5, 1.5)
texture = ExtResource("19_m64th")

[node name="Wheel" type="Sprite2D" parent="Characters/SegwayJohnny"]
show_behind_parent = true
position = Vector2(0, 12)
texture = ExtResource("20_15mi0")

[node name="Fire" type="AnimatedSprite2D" parent="Characters/SegwayJohnny"]
show_behind_parent = true
position = Vector2(-23, -9)
sprite_frames = SubResource("SpriteFrames_yxqht")
animation = &"fire_B"
script = ExtResource("27_xoh8o")

[node name="Misslie" type="Sprite2D" parent="Characters/SegwayJohnny"]
show_behind_parent = true
position = Vector2(0, -9)
texture = ExtResource("27_3jnxc")

[node name="Outrider" type="Sprite2D" parent="Characters"]
visible = false
position = Vector2(0, -5)
scale = Vector2(1.2, 1.2)
texture = ExtResource("29_8hxwy")

[node name="Wheel" type="Sprite2D" parent="Characters/Outrider"]
show_behind_parent = true
position = Vector2(-16.5, 11.5)
texture = ExtResource("20_15mi0")

[node name="Wheel1" type="Sprite2D" parent="Characters/Outrider"]
show_behind_parent = true
position = Vector2(19.5, 11.5)
texture = ExtResource("20_15mi0")

[node name="GlassMan" type="Sprite2D" parent="Characters/Outrider"]
position = Vector2(-19.5, -1)
texture = ExtResource("30_bb6r6")

[node name="Star" type="AnimatedSprite2D" parent="Characters"]
visible = false
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_ncap1")
animation = &"Spin"
autoplay = "Spin"

[node name="Glow" type="Sprite2D" parent="Characters/Star"]
texture = ExtResource("13_s3aw0")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Characters"]
libraries = {
&"": SubResource("AnimationLibrary_svdnd")
}
autoplay = "Reset"
speed_scale = 2.0

[node name="HighCollider" type="CollisionShape2D" parent="."]
position = Vector2(0, -5)
shape = SubResource("CapsuleShape2D_gdqmg")

[node name="LowCollider" type="CollisionShape2D" parent="."]
position = Vector2(0, 5)
shape = SubResource("CircleShape2D_107ty")

[node name="SeparationRayShape3D" type="CollisionShape2D" parent="."]
shape = SubResource("SeparationRayShape2D_5wp5o")

[node name="LeftGroundSensor" type="RayCast2D" parent="."]
position = Vector2(-9, 0)
target_position = Vector2(0, 36)

[node name="RightGroundSensor" type="RayCast2D" parent="."]
position = Vector2(9, 0)
target_position = Vector2(0, 36)

[node name="RightWallSensor" type="RayCast2D" parent="."]
target_position = Vector2(11, 0)

[node name="LeftWallSensor" type="RayCast2D" parent="."]
target_position = Vector2(-11, 0)

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(420, 540)
limit_left = -100000000
limit_top = 0
limit_right = 100000000
limit_bottom = 0
position_smoothing_enabled = true
position_smoothing_speed = 10.0
drag_horizontal_enabled = true
drag_left_margin = 0.1
drag_top_margin = 0.1
drag_right_margin = 0.1
drag_bottom_margin = 0.1

[node name="StarCollect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_8qqrx")
max_polyphony = 3

[node name="DoppelDead" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_7qgch")
volume_db = 8.0
max_polyphony = 3
